--- a/javascript-series/index.html
+++ b/javascript-series/index.html
@@ -6,24 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    
     <script>
-    const day = prompt('Enter day :')
-
-switch( day){
-case 'monday':
-case 'tuesday':
-case 'wednesday':
-case 'Thursday':
-case 'friday':
-    console.log('week day')
-    break;
-case 'saturday':
-case 'sunday':
-   console.log('weekend')
-   break;
-default:
-    console.log('invalid day')
-}
+      let count1 = 1;
+      do {
+        console.log(count1);
+        count1++
+      } while(count1 <=5)
     </script>
 </body>
 </html>
