--- a/javascript-series/index.html
+++ b/javascript-series/index.html
@@ -8,11 +8,10 @@
 <body>
     
     <script>
-      let count1 = 1;
-      do {
-        console.log(count1);
-        count1++
-      } while(count1 <=5)
+     const language = 'python';
+ for (let word of language){
+    console.log(word)
+ }
     </script>
 </body>
 </html>
