--- a/javascript-series/index.html
+++ b/javascript-series/index.html
@@ -8,10 +8,17 @@
 <body>
     
     <script>
-     const language = 'python';
- for (let word of language){
-    console.log(word)
- }
+     const text = "hello"
+console.log(text.charAt(0))
+console.log(text.charAt(3))
+console.log(text.charAt(2))
+
+console.log(text.length)
+
+let str1 = 'hello';
+let str2 = 'HELLO'
+console.log(str1 === str2)
     </script>
+        
 </body>
 </html>
