--- a/javascript-series/index.html
+++ b/javascript-series/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
     <script>
-        const name = 'hamza'
-        function greet(name){
-          console.log('good morning hamza' + name)
+        const addNumbers = (x, y)=>{
+            return x * y
         }
-        greet()
+        a = parseFloat(prompt('enter number a :'))
+        b = parseFloat(prompt('Enter number b :'))
+        
+        let results = addNumbers(a, b)
+        console.log(results)
     
     </script>
 </body>
